Fri, Jan 20, 2023, 10:06 PM +00:00

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "gitdoc.enabled": true,
     "files.associations": {
         "cs50.h": "c"
-    }
+    },
+    "workbench.preferredDarkColorTheme": "GitHub Dark Default",
+    "workbench.colorTheme": "GitHub Dark"
 }
