Fri, Jan 20, 2023, 10:08 PM +00:00

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
     "workbench.colorTheme": "GitHub Dark",
     "editor.semanticTokenColorCustomizations": {
     "[GitHub Dark]": {}
+    },
+    "workbench.colorCustomizations": {
+    "[GitHub Dark]": {}
     }
 }
