--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "cs50.h": "c"
     },
     "workbench.preferredDarkColorTheme": "GitHub Dark Default",
-    "workbench.colorTheme": "GitHub Dark",
+    "workbench.colorTheme": "GitHub Dark Default",
     "editor.semanticTokenColorCustomizations": {
     "[GitHub Dark]": {}
     },
