--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "gitdoc.enabled": true,
     "files.associations": {
-        "cs50.h": "c"
+        "cs50.h": "c",
+        "ctype.h": "c"
     },
     "workbench.preferredDarkColorTheme": "GitHub Dark Default",
     "workbench.colorTheme": "GitHub Dark",
