--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
         "math.h": "c"
     },
     "workbench.preferredDarkColorTheme": "GitHub Dark Default",
-    "workbench.colorTheme": "Default Dark+",
+    "workbench.colorTheme": "GitHub Dark Default",
     "editor.semanticTokenColorCustomizations": {
     "[GitHub Dark]": {}
     },
