Mon, Mar 13, 2023, 8:53 PM -04:00

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,10 @@
         "cs50.h": "c",
         "ctype.h": "c",
         "helpers.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c"
     },
     "workbench.preferredDarkColorTheme": "GitHub Dark Default",
     "workbench.colorTheme": "GitHub Dark Default",
