--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
         "string_view": "c"
     },
     "workbench.preferredDarkColorTheme": "GitHub Dark Default",
-    "workbench.colorTheme": "GitHub Dark Default",
+    "workbench.colorTheme": "Default Dark+",
     "editor.semanticTokenColorCustomizations": {
     "[GitHub Dark]": {}
     },
