Wed, Apr 12, 2023, 5:29 PM -04:00

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
     },
     "workbench.colorCustomizations": {
     "[GitHub Dark]": {}
-    }
+    },
+    "editor.tabCompletion": "onlySnippets"
 }
