Thu, Apr 13, 2023, 3:53 PM -04:00

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
         "stdio.h": "c"
     },
     "workbench.preferredDarkColorTheme": "GitHub Dark Default",
-    "workbench.colorTheme": "Default Dark+",
+    "workbench.colorTheme": "Monokai",
     "editor.semanticTokenColorCustomizations": {
     "[GitHub Dark]": {}
     },
